# BFL_fusionlab

./: README.md  a.cpp  a.h  a.txx  compile_mex.m
diffeomorphic_registration/: BFL_pairwise_reg3D.m  BFL_pairwise_reg3D_DEMO.m  CMakeCache.txt  CMakeLists.txt  Makefile  SDCMakeMacros.txt  affineMat_est.mat  cmake_install.cmake  compile_mex_example.m  compile_mex_unix.csh  deffieldharmonicenergy.mexa64  deffieldjacobiandeterminant.mexa64  deffieldjacobiandist.mexa64  extracet02_warped.mgz  extract01.mgz  extract01_back-10.mgz  extract02.mgz  extract02_back-10.mgz  extract02_warped_10clock.mgz  invcondemonsforces.mexa64  invconstdemonsreg3d_aux.m  itkESMInvConDemonsRegistrationFunction.h  itkESMInvConDemonsRegistrationFunction.txx  itkESMInvConDemonsRegistrationFunction.txx~  mex_invcondemonsforces.cpp  mex_readwarpfile.cpp  mex_writewarpfile.cpp  readwarpfile.mexa64  smallregion.m  velocityfieldexp.mexa64  warpimage.mexa64  warplabelimage.mexa64  weightedfwdemonsforces.mexa64  writewarpfile.mexa64
segmentation/: BFL_labelfusion_3D.m
